--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -82,6 +82,7 @@
   <script src="/externals/jquery/jquery.js"></script>
   <script src="/externals/bootstrap/js/bootstrap.min.js"></script>
   <script src="/externals/bxslider/jquery.bxslider-rahisified.js"></script>
+  <script src="/externals/bootstrapValidator/js/bootstrapValidator.min.js"></script>
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
   <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   <script src="/js/sixsq.js"></script>
