--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
 
   <!-- Bootstrap core CSS -->
   <link href="/externals/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="/externals/bootstrapValidator/css/bootstrapValidator.min.css" rel="stylesheet" />
   <link href="/externals/bxslider/jquery.bxslider.css" rel="stylesheet" />
   <link href="/css/tipsy.css" rel="stylesheet" />
 
