--- a/_includes/nuvlabox_intro.html
+++ b/_includes/nuvlabox_intro.html
@@ -1,3 +1,4 @@
+<div id="banner"><div>Partners Wanted</div></div>
 <div class="jumbotron top_product nuvlabox">
   <div class="container">
     <h1>NuvlaBox</h1>
