--- a/_includes/slipstream_intro.html
+++ b/_includes/slipstream_intro.html
@@ -1,3 +1,4 @@
+<div id="banner"><div>Partners Wanted</div></div>
 <div class="jumbotron top_product slipstream">
   <div class="container">
     <h1>SlipStream</h1>
