--- a/_includes/top.html
+++ b/_includes/top.html
@@ -33,8 +33,6 @@
   </div>
 </header>
 
-<div id="error-dialog" class="alert alert-error" style="display:none;">
+<div id="error-modal" class="alert alert-error" style="display:none;">
     <a href="#" class="close" data-dismiss="alert">&times;</a>
-  	An error occurred while sending the form. Please check your internet connection and if the problem persists, please
-  	let <a href="mailto:support@sixsq.com">us know</a>.
 </div>
