--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -5,7 +5,7 @@
    {% include top.html %}
    {% include media_nav.html %}
 
-  <div class="jumbotron nuvlabox-main-story">
+  <div class="jumbotron">
     <div class="container">
       <h1>{{ page.title }}</h1>
     </div>
