--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -26,29 +26,37 @@
             <!-- Main jumbotron for a primary marketing message or call to action -->
           <div class="jumbotron">
 
-              <div class="container">
-                <h1>Hybrid Cloud Application Deployment</h1>
-                <h2>1-click application deployment automation, based on professional open source.</h2>
-                <p align="center"><img src="/img/content/slipstream-overview.png" alt="SlipStram overview" width="80%" style="padding: 35px 0 15px 0;"/></p>
-                <p/><p><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream.html">Learn more &raquo;</a></p>
-              </div>
+            <div class="container">
+              <h1>Hybrid Cloud Application Deployment</h1>
+              <h2>1-click application deployment automation, based on professional open source.</h2>
+              <p align="center"><img src="/img/content/slipstream-overview.png" alt="SlipStram overview" width="80%" style="padding: 35px 0 15px 0;"/></p>
+              <p/><p><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream.html">Learn more &raquo;</a></p>
+            </div>
 
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-4">
-                    <h2>Enterprise App Store / Self-Service IT</h2>
-                    <p><a class="btn btn-default" href="/products/slipstream-usecases.html#Enterprise-App-Store-/-Self-Service-IT" role="button">Use case details &raquo;</a></p>
-                  </div>
-                  <div class="col-md-4">
-                    <h2>Hybrid Cloud Provisioning</h2>
-                    <p><a class="btn btn-default" href="/products/slipstream-usecases.html#Hybrid-Cloud-Provisioning" role="button">Use case details &raquo;</a></p>
-                  </div>
-                  <div class="col-md-4">
-                    <h2>LAMP and complex application provisioning</h2>
-                    <p><a class="btn btn-default" href="/products/slipstream-usecases.html#LAMP-and-complex-application-provisioning" role="button">Use case details &raquo;</a></p>
-                  </div>
+            <div class="container">
+              <div class="row">
+                <div class="col-md-4">
+                  <h2>Enterprise App Store / Self-Service IT</h2>
+                  <p><a class="btn btn-default" href="/products/slipstream-usecases.html#Enterprise-App-Store-/-Self-Service-IT" role="button">Use case details &raquo;</a></p>
                 </div>
-              </div> <!-- /container -->
+                <div class="col-md-4">
+                  <h2>Hybrid Cloud Provisioning</h2>
+                  <p><a class="btn btn-default" href="/products/slipstream-usecases.html#Hybrid-Cloud-Provisioning" role="button">Use case details &raquo;</a></p>
+                </div>
+                <div class="col-md-4">
+                  <h2>LAMP and complex application provisioning</h2>
+                  <p><a class="btn btn-default" href="/products/slipstream-usecases.html#LAMP-and-complex-application-provisioning" role="button">Use case details &raquo;</a></p>
+                </div>
+              </div>
+            </div>
+            <div class="container spacy">
+              <h1>All Clouds Supported</h1>
+              <h2>We support all mainstream clouds.</h2>
+              <p align="center">
+                <img src="/img/content/cloud_providers_color_on_transparent_1000px.png" alt="SlipStream Supported Clouds" width="70%" />
+              </p>
+              <h2>And if we are missing the one you need, get in touch... chances are it is already on its way.</h2>
+            </div> <!-- /container -->
 
           </div> <!-- /jumbotron -->
 
@@ -64,15 +72,15 @@
               <div class="row">
                 <div class="col-md-4">
                   <h2>Schools or Federation of Schools</h2>
-                  <p><a class="btn btn-default" href="#" role="button">Use case details &raquo;</a></p>
+                  <p><a class="btn btn-default" href="/products/nuvlabox-usecases.html#Schools-or-Federation-of-Schools" role="button">Use case details &raquo;</a></p>
                 </div>
                 <div class="col-md-4">
                   <h2>Putting Intelligence at the Edge of the Network</h2>
-                  <p><a class="btn btn-default" href="#" role="button">Use case details &raquo;</a></p>
+                  <p><a class="btn btn-default" href="/products/nuvlabox-usecases.html#Putting-Intelligence-at-the-Edge-of-the-Network" role="button">Use case details &raquo;</a></p>
                </div>
                 <div class="col-md-4">
                   <h2>Field Operations with Agile Local Infrastructure</h2>
-                  <p><a class="btn btn-default" href="#" role="button">Use case details &raquo;</a></p>
+                  <p><a class="btn btn-default" href="/products/nuvlabox-usecases.html#Field-Operations-with-Agile-Local-Infrastructure" role="button">Use case details &raquo;</a></p>
                 </div>
               </div>
             </div> <!-- /container -->
