--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -41,6 +41,8 @@
     
     {% include comments.html %}
 
+    {% include whats-next.html %}
+
     {% include footer.html %}
 
     <script type="text/javascript">$("#menu_{{ page.class }} > a, nav li#sub_{{ page.sub }} > a").addClass("current");</script>
