--- a/_layouts/article_slipstream_overview.html
+++ b/_layouts/article_slipstream_overview.html
@@ -94,7 +94,10 @@
 
       {% include overview_usecases.html %}
 
-      {% include whats-next-and-order.html %}
+      <div class="odd">
+      {% include overview-videos.html %}
+      </div>
+      {% include whats-next.html %}
       {% include footer.html %}
 
   </body>
