--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -36,6 +36,8 @@
     {% endif %}
   {% endfor %}
 
+  {% include whats-next.html %}
+
   {% include footer.html %}
 
     <!-- <script type="text/javascript">$("#nav-media").addClass("active");</script> -->
