--- a/_layouts/customer_list.html
+++ b/_layouts/customer_list.html
@@ -46,7 +46,7 @@
             {% endif %}
           {% endfor %}
 
-          {% include whats-next-and-order.html %}
+          {% include whats-next.html %}
 
           {% include footer.html %}
 
