--- a/_includes/whats-next.html
+++ b/_includes/whats-next.html
@@ -2,13 +2,11 @@
   <div class="container spacy">
     <h1>What's next?</h1>
     <p>
-      Interested and want to know more? We'd be pleased to provide you with further information.
+Interested and want to know more? We'd be pleased to provide you with further information. Get in touch.
     </p>
-    <div class="container">
-      <button class="btn btn-primary btn-lg center-block" data-toggle="modal" data-target="#contact-modal">
-        Contact us
-      </button>
-    </div>
+    <button class="btn btn-primary btn-lg center-block" data-toggle="modal" data-target="#contact-modal">
+      Contact us &raquo;
+    </button>
   </div>
 </div>
 
@@ -17,24 +15,56 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-        <h4 class="modal-title" id="order-modal-label">Contact us</h4>
+        <h4 class="modal-title" id="contact-modal-label">Contact us</h4>
       </div>
-      <form>
+      <div class="modal-body">
+        <form id="contact-form" class="form-vertical" action="http://getsimpleform.com/messages/ajax?form_api_token=7673c6c3500a57c2403047aaa5ba9ca4" method="post">
+          <input class="hidden" type="text" name="subject" value="enquiry"></input>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" class="form-control" name="email" placeholder="bob.smith@acme.com" data-bv-notempty data-bv-notempty-message="The email is required"></input>
+          </div>
+          <div class="form-group">
+            <label for="firstname">First Name</label>
+            <input type="text" class="form-control" name="firstname" placeholder="Bob"></input>
+          </div>
+          <div class="form-group">
+            <label for="lastname">Last Name</label>
+            <input type="text" class="form-control" name="lastname" placeholder="Smith"></input>
+          </div>
+          <div class="form-group">
+            <label for="company">Company/Organisation</label>
+            <input type="text" class="form-control" name="company" placeholder="ACME Inc"></input>
+          </div>
+          <div class="form-group">
+              <label for="message">Message</label>
+              <textarea class="form-control" name="message" placeholder="What can we help you with?"></textarea>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">Send</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal" id="contact-thanks-modal" tabindex="-1" role="dialog" aria-labelledby="contact-thanks-modal-label">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="contact-modal-label">Thanks for your query</h4>
+      </div>
         <div class="modal-body">
-          <div class="form-group">
-              <label for="email">Email</label>
-              <input type="email" class="form-control" id="email" placeholder="Email">
-          </div>
-          <div class="form-group">
-              <label for="message">Question</label>
-              <input type="text" class="form-control" id="message" placeholder="What can we help you with?">
-          </div>
+          <p>We will be in touch shortly.</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="submit" class="btn btn-primary">Send</button>
+          <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
         </div>
       </form>
     </div>
   </div>
 </div>
+
