--- a/_layouts/article_nuvlabox.html
+++ b/_layouts/article_nuvlabox.html
@@ -10,9 +10,7 @@
         {{ page.content | markdownify }}
       </div>
 
-      {% unless page.no_whatsnext %}
-        {% include whats-next-and-order.html %}
-      {% endunless %}
+      {% include whats-next.html %}
 
       {% include footer.html %}
 
