--- a/_layouts/article_nuvlabox_overview.html
+++ b/_layouts/article_nuvlabox_overview.html
@@ -29,7 +29,9 @@
 
         <div class="main-story nuvlabox">
           <div class="container">
-            <p align="center"><img src="/img/content/nuvlabox-overview.png" alt="NuvlaBox overview" width="80%" style="padding: 35px 0 15px 0;"/></p>
+            <p align="center">
+              <img src="/img/content/nuvlabox-overview.png" alt="NuvlaBox overview" />
+            </p>
           </div>
         </div>
         <div class="container spacy">
@@ -111,7 +113,7 @@
 
       {% include overview_usecases.html %}
 
-      {% include whats-next-and-order.html %}
+      {% include whats-next.html %}
       {% include footer.html %}
 
   </body>
