--- a/_layouts/article_slipstream_overview.html
+++ b/_layouts/article_slipstream_overview.html
@@ -62,7 +62,7 @@
                 Multi-Tenant
             </h2>
             <p>
-                Build for enterprise, with multi-tenancy support.
+                Build for enterprise, with multi-tenancy and policy support.
             </p>
           </div>
           <div class="col-md-4">
@@ -75,10 +75,10 @@
           </div>
           <div class="col-md-4">
             <h2>
-                Scalable
+                Affordable
             </h2>
             <p>
-                Used by distributed teams, with demanding workloads, means SlipStream will scale with your usage.
+                With our flexible pricing model, SlipStream is affordable and very competitive.
             </p>
           </div>
         </div>
