--- a/_layouts/article_slipstream_usecases.html
+++ b/_layouts/article_slipstream_usecases.html
@@ -48,10 +48,7 @@
         <h1 id="{{ post.title | replace:' ','-' }}">
           {{ post.title }}
         </h1>
-        <h2>User profile</h2>
-        <div>
-          {{ post.user_profile }}
-        </div>
+        <h2>User profile: {{ post.user_profile }}</h2>
         <h2>Overview</h2>
         <div>
           {{ post.content }}
