--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -21,7 +21,7 @@
 
         {% include top.html %}
 
-          <div id="banner"><div>Partners Wanted</div></div>
+          <div class="banner"><div><a href="/contact.html">Partners Wanted</a></div></div>
 
             <!-- Main jumbotron for a primary marketing message or call to action -->
           <div class="jumbotron">
