--- a/_includes/nuvlabox_intro.html
+++ b/_includes/nuvlabox_intro.html
@@ -1,4 +1,8 @@
-<div id="banner"><div>Partners Wanted</div></div>
+<div class="banner">
+  <div>
+    <a href="/contact.html">Partners Wanted</a>
+  </div>
+</div>
 <div class="jumbotron top_product nuvlabox">
   <div class="container">
     <h1>NuvlaBox</h1>
