Change syntax & first line on welcome page

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -27,8 +27,8 @@
           <div class="jumbotron">
 
             <div class="container">
-              <h1>Hybrid Cloud Application Deployment</h1>
-              <h2>1-click application deployment automation, based on professional open source.</h2>
+              <h1>Automate Application Deployment to the Cloud</h1>
+              <h2>1-click application deployment automation. Real multi-cloud solution built on open source software.</h2>
               <p align="center"><img src="/img/content/slipstream-overview.png" alt="SlipStram overview" max-width="900px" style="padding: 35px 0 15px 0;"/></p>
               <p/><p><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream.html">Learn more &raquo;</a></p>
             </div>
