--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -41,7 +41,7 @@
     
     {% include comments.html %}
 
-    {% include whats-next.html %}
+    {% include whats_next.html %}
 
     {% include footer.html %}
 
