--- a/_layouts/article_nuvlabox.html
+++ b/_layouts/article_nuvlabox.html
@@ -10,7 +10,7 @@
         {{ page.content | markdownify }}
       </div>
 
-      {% include whats-next.html %}
+      {% include whats_next.html %}
 
       {% include footer.html %}
 
