--- a/_layouts/article_nuvlabox_overview.html
+++ b/_layouts/article_nuvlabox_overview.html
@@ -113,7 +113,7 @@
 
       {% include overview_usecases.html %}
 
-      {% include whats-next.html %}
+      {% include whats_next.html %}
       {% include footer.html %}
 
   </body>
