--- a/_layouts/article_nuvlabox_usecases.html
+++ b/_layouts/article_nuvlabox_usecases.html
@@ -61,7 +61,7 @@
     {% endif %}
   {% endfor %}
 
-  {% include whats-next.html %}
+  {% include whats_next.html %}
 
   {% include footer.html %}
 
