--- a/_layouts/article_slipstream.html
+++ b/_layouts/article_slipstream.html
@@ -11,10 +11,10 @@
       </div>
 
       {% if page.with-videos %}
-        {% include overview-videos.html %}
+        {% include overview_videos.html %}
       {% endif %}
 
-      {% include whats-next.html %}
+      {% include whats_next.html %}
 
       {% include footer.html %}
 
