--- a/_layouts/plain.html
+++ b/_layouts/plain.html
@@ -6,7 +6,7 @@
 
     {{ page.content | markdownify }}
 
-    {% include whats-next.html %}
+    {% include whats_next.html %}
 
     {% include footer.html %}
 
