--- a/_layouts/article_slipstream_overview.html
+++ b/_layouts/article_slipstream_overview.html
@@ -20,16 +20,8 @@
   {% include slipstream_nav.html %}
   {% include slipstream_intro.html %}
 
-<!--      <div class="jumbotron">
-        <div class="container">
-          <h1>SlipStream</h1>
-          <p>1-click multi-cloud application deployment platform. Real multi-cloud software solution built on open source software.</p>
-          <p align="center"><img src="/img/content/slipstream-overview.png" alt="SlipStram overview" width="700" style="padding: 35px 0 15px 0;"/></p>
-        </div>
-      </div> -->
-
       <div class="jumbotron">
-        <p align="center"><img src="/img/content/slipstream-overview.png" alt="SlipStram overview" width="80%" style="padding: 35px 0 15px 0;"/></p>
+        <p align="center"><img src="/img/content/slipstream-overview.png" alt="SlipStram overview"/></p>
       </div>
 
       <div class="container spacy">
@@ -95,9 +87,9 @@
       {% include overview_usecases.html %}
 
       <div class="odd">
-      {% include overview-videos.html %}
+      {% include overview_videos.html %}
       </div>
-      {% include whats-next.html %}
+      {% include whats_next.html %}
       {% include footer.html %}
 
   </body>
