--- a/_layouts/article_slipstream_usecases.html
+++ b/_layouts/article_slipstream_usecases.html
@@ -58,7 +58,7 @@
     {% endif %}
   {% endfor %}
 
-  {% include whats-next.html %}
+  {% include whats_next.html %}
 
   {% include footer.html %}
 
