--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -36,7 +36,7 @@
     {% endif %}
   {% endfor %}
 
-  {% include whats-next.html %}
+  {% include whats_next.html %}
 
   {% include footer.html %}
 
