--- a/_layouts/media.html
+++ b/_layouts/media.html
@@ -7,7 +7,7 @@
 
     {{ page.content | markdownify }}
 
-    {% include whats-next.html %}
+    {% include whats_next.html %}
 
     {% include footer.html %}
 
