--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -27,7 +27,7 @@
           <div class="jumbotron">
 
             <div class="container">
-              <h1>Hybrid Cloud Application Deployment</h1>
+              <h1>Application Deployment in any Cloud</h1>
               <h2>1-click application deployment automation, based on professional open source.</h2>
               <p align="center"><img src="/img/content/slipstream-overview.png" alt="SlipStram overview" max-width="900px" style="padding: 35px 0 15px 0;"/></p>
               <p/><p><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream.html">Learn more &raquo;</a></p>
@@ -86,6 +86,7 @@
             </div> <!-- /container -->
           </div> <!-- /container -->
 
+        {% include front_personae.html %}
         {% include customers.html %}
         
         {% include footer.html %}
