--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -28,7 +28,7 @@
 
             <div class="container">
               <h1>Application Deployment in any Cloud</h1>
-              <h2>1-click application deployment automation. Real multi-cloud solution built on open source software.</h2>
+              <h2>1-click multi-cloud application deployment platform. Real multi-cloud software solution built on professional open source software.</h2>
               <p align="center"><img src="/img/content/slipstream-overview.png" alt="SlipStram overview" max-width="900px" style="padding: 35px 0 15px 0;"/></p>
               <p/><p><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream.html">Learn more &raquo;</a></p>
             </div>
