Add persona and context to usecases

--- a/_includes/front_personae.html
+++ b/_includes/front_personae.html
@@ -1,7 +1,7 @@
 <div id="personae" class="container spacy">
   <div class="row">
-    <h1>Meet our Users</h1>
-    <h3>Meet our virtual users (personae) we develop SlipStream and NuvlaBox for</h3>
+    <h1>Our Users</h1>
+    <h3>Meet our SlipStream and NuvlaBox virtual users (personae)</h3>
     <p/>
     {% for post in site.categories.personae reversed %}
       <div class="col-md-3">
