--- a/_layouts/article_nuvlabox_overview.html
+++ b/_layouts/article_nuvlabox_overview.html
@@ -20,13 +20,6 @@
   {% include nuvlabox_nav.html %}
   {% include nuvlabox_intro.html %}
 
-<!--        <div class="jumbotron top_product nuvlabox">
-          <div class="container">
-            <h1>NuvlaBox</h1>
-            <p>Pre-installed and ready to go in minutes, a fanless PC, powered by 1-click application deployment App Store. Having your own cloud has never been this affordable, secure and easy.</p>
-          </div>
-        </div> -->
-
         <div class="main-story nuvlabox">
           <div class="container">
             <p align="center">
@@ -90,7 +83,7 @@
       <div class="main-story nuvlabox">
         <div class="container spacy">
           <h1 id="who-is-the-nuvlabox-for">Who is the NuvlaBox for?</h1>
-          <div class="row">
+          <div id="enterprise" class="row">
             <div class="col-md-6">
               <h2>
                 Small and Medium Enterprises
@@ -99,7 +92,7 @@
                 Perfect for SMEs wishing to access a small to medium-sized private cloud. NuvlaBox offers an affordable entry point into private company cloud computing.
               </p>
             </div>
-            <div class="col-md-6">
+            <div id="sme" class="col-md-6">
               <h2>
                 Large Enterprises
               </h2>
