Change to sub head for NB & SS

--- a/_layouts/article_nuvlabox_overview.html
+++ b/_layouts/article_nuvlabox_overview.html
@@ -23,7 +23,7 @@
 <!--        <div class="jumbotron top_product nuvlabox">
           <div class="container">
             <h1>NuvlaBox</h1>
-            <p>Pre-installed and ready to go in minutes, a fanless PC, powered by 1-click application deployment App Store. Having your own cloud has never been this affordable, secure and easy.</p>
+            <p>Bridging the digital divide with an affordable cloud-in-a-box that's child's play to use and manage.</p>
           </div>
         </div> -->
 
@@ -56,7 +56,7 @@
                   Simple
               </h2>
               <p>
-                  Smart factory settings and zero config means it's a child's play to setup and use. 
+                  Smart factory settings and zero config means it's a child's play to set up, use and manage. 
               </p>
             </div>
             <div class="col-md-4">
