--- a/_layouts/article_slipstream_overview.html
+++ b/_layouts/article_slipstream_overview.html
@@ -23,8 +23,8 @@
 <!--      <div class="jumbotron">
         <div class="container">
           <h1>SlipStream</h1>
-          <p>1-click multi-cloud application deployment platform. Real multi-cloud software solution built on open source software.</p>
-          <p align="center"><img src="/img/content/slipstream-overview.png" alt="SlipStram overview" width="700" style="padding: 35px 0 15px 0;"/></p>
+          <p>1-click application deployment automation. Real multi-cloud software solution built on open source software.</p>
+          <p align="center"><img src="/img/content/slipstream-overview.png" alt="SlipStream overview" width="700" style="padding: 35px 0 15px 0;"/></p>
         </div>
       </div> -->
 
@@ -54,7 +54,7 @@
                 Multi-Cloud
             </h2>
             <p>
-                A truly multi-cloud and cloud agnostic provisioning platform giving you freedom of choice, avoiding lock-in.
+                A truly multi-cloud and cloud-agnostic provisioning platform giving you freedom of choice, avoiding lock-in.
             </p>
           </div>
           <div class="col-md-4">
@@ -62,7 +62,7 @@
                 Multi-Tenant
             </h2>
             <p>
-                Build for enterprise, with multi-tenancy and policy support.
+                Built for enterprise, with multi-tenancy and policy support.
             </p>
           </div>
           <div class="col-md-4">
