Fix broken customer page

--- a/_includes/customers.html
+++ b/_includes/customers.html
@@ -1,28 +1,30 @@
 <div class="container spacy">
   <h1>Our customers</h1>
   <p>Our customers are large and small system integrators, high-tech companies, institutions and agencies. We value transparent relationships, built on trust and honesty. This approach is valued by our customers and partners, giving us an edge over competition.</p>
-  <ul id="bxslider" data-call="bxslider" data-options="slideMargin:0, auto:true, autoReload:true" data-breaks="[{screen:0, slides:3, pager:true, controls: false}, {screen:460, slides:4, controls: false}, {screen: 768, slides:8, pager:false, controls: false}]">
+  <a href="/customers/index.html">
+    <ul id="bxslider" data-call="bxslider" data-options="slideMargin:0, auto:true, autoReload:true" data-breaks="[{screen:0, slides:3, pager:true, controls: false}, {screen:460, slides:4, controls: false}, {screen: 768, slides:8, pager:false, controls: false}]">
 
-    <li>
-	    <img src="/img/content/logo_esa.png" />
-    </li>
-    <li>
-      <img src="/img/content/logo_citrix.png" />
-    </li>
-    <li>
-      <img src="/img/content/logo_atos.png" />
-    </li>
-    <li>
-      <img src="/img/content/logo_interoute.png" />
-    </li>
-    <li>
-      <img src="/img/content/logo_ebu-uer.png" />
-    </li>
-    <li>
-      <img src="/img/content/logo_rhea.png" />
-    </li>
-    <li>
-      <img src="/img/content/logo_scisys.png" />
-    </li>
-  </ul>
+      <li>
+  	    <img src="/img/content/logo_esa.png" />
+      </li>
+      <li>
+        <img src="/img/content/logo_citrix.png" />
+      </li>
+      <li>
+        <img src="/img/content/logo_atos.png" />
+      </li>
+      <li>
+        <img src="/img/content/logo_interoute.png" />
+      </li>
+      <li>
+        <img src="/img/content/logo_ebu-uer.png" />
+      </li>
+      <li>
+        <img src="/img/content/logo_rhea.png" />
+      </li>
+      <li>
+        <img src="/img/content/logo_scisys.png" />
+      </li>
+    </ul>
+  </a>
 </div>
