--- a/_layouts/personae_index.html
+++ b/_layouts/personae_index.html
@@ -13,14 +13,15 @@
   {% for post in site.posts reversed %}
     {% if post.category == page.category %}
     <div id="{{ post.title }}" class="{% cycle 'even', 'odd' %} spacy">
-      <div class="container">
+      <div class="container personae">
         <center>
           <img src="{{ post.icon }}" />
           <p/>
           <h2>{{ post.title }}</h2>
         </center>
-        <h4>{{ post.overview }}</h4>
-        {{ post.content | strip_html }}
+        <h3>{{ post.overview }}</h3>
+        <p/>
+        {{ post.content }}
       </div>
     </div>
     {% endif %}
