Adjust h1 and h2 sizes

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -53,9 +53,9 @@
               <h1>All Clouds Supported</h1>
               <h2>We support all mainstream clouds.</h2>
               <p align="center">
-                <img src="/img/content/cloud_providers_color_on_transparent_1000px.png" alt="SlipStream Supported Clouds" />
+                <img src="/img/content/cloud_providers_color_on_transparent_1000px.png" alt="SlipStream Supported Clouds" style="max-width: 700px" />
               </p>
-              <h2>And if we are missing the one you need, get in touch... chances are it is already on its way.</h2>
+              <h3>And if we are missing the one you need, get in touch... chances are it is already on its way.</h3>
             </div> <!-- /container -->
 
           </div> <!-- /jumbotron -->
