--- a/_layouts/personae_index.html
+++ b/_layouts/personae_index.html
@@ -7,7 +7,7 @@
   <div class="jumbotron">
     <div class="container">
       <h1>{{ page.title }}</h1>
-      <h2>Meet our SlipStream and NuvlaBox virtual users (personae)</h2>
+      <h2>Meet our SlipStream and NuvlaBox users</h2>
     </div>
   </div>
   {% for post in site.posts reversed %}
