Few more changes Add IaaS

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -63,7 +63,7 @@
           <div class="jumbotron main-story nuvlabox">
             <div class="container">
               <h1>Bridging the digital divide</h1>
-              <h2>...with an affordable cloud-in-a-box that's child's play to use and manage.</h2>
+              <h2>with an affordable cloud-in-a-box that's child's play to use and manage</h2>
               <p align="center"><img src="/img/content/nuvlabox-overview.png" alt="SlipStram overview" max-width="900px" style="padding: 35px 0 15px 0;"/></p>
               <p><a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox.html">Learn more &raquo;</a></p>
             </div>
