--- a/_includes/nuvlabox_intro.html
+++ b/_includes/nuvlabox_intro.html
@@ -6,6 +6,6 @@
 <div class="jumbotron top_product nuvlabox">
   <div class="container">
     <h1>NuvlaBox</h1>
-    <p>Pre-installed and ready to go in minutes, a fanless PC, powered by 1-click application deployment App Store. Having your own cloud has never been this affordable, secure and easy.</p>
+    <p>Bridging the digital divide with an affordable cloud-in-a-box that's child's play to use and manage</p>
   </div>
 </div>
