--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,19 +1,61 @@
-<!--<div id="footer">
-
-  <div id='contact-us-thanks-dialog'>
-  Thank you very much for your enquiry. We will be in touch shortly.
+<div class="modal fade" id="contact-modal" tabindex="-1" role="dialog" aria-labelledby="contact-modal-label" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="contact-modal-label">Contact us</h4>
+      </div>
+      <div class="modal-body">
+        <form id="contact-form" class="form-vertical" action="http://getsimpleform.com/messages/ajax?form_api_token=7673c6c3500a57c2403047aaa5ba9ca4" method="post">
+          <input class="hidden" type="text" name="subject" value="enquiry"></input>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="email" class="form-control" name="email" placeholder="bob.smith@acme.com" data-bv-notempty data-bv-notempty-message="The email is required"></input>
+          </div>
+          <div class="form-group">
+            <label for="firstname">First Name</label>
+            <input type="text" class="form-control" name="firstname" placeholder="Bob"></input>
+          </div>
+          <div class="form-group">
+            <label for="lastname">Last Name</label>
+            <input type="text" class="form-control" name="lastname" placeholder="Smith"></input>
+          </div>
+          <div class="form-group">
+            <label for="company">Company/Organisation</label>
+            <input type="text" class="form-control" name="company" placeholder="ACME Inc"></input>
+          </div>
+          <div class="form-group">
+              <label for="message">Message</label>
+              <textarea class="form-control" name="message" placeholder="What can we help you with?"></textarea>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">Send</button>
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
-  <div id='contact-us-dialog'>
-    <form id='contact-us-form' action='http://getsimpleform.com/messages/ajax?form_api_token=7673c6c3500a57c2403047aaa5ba9ca4' method='post'>
-      <input class='hidden' type='text' name='subject' value='enquiry' ></input>
-      <br/>
-      You email: <input type='text' name='email' placeholder='me@example.com'></input>
-      <br/>
-      <br/>
-      Question:
-      <textarea type='text' name='message' placeholder='What can we help you with?...'></textarea>
-    </form>
-  </div> -->
+</div>
+
+<div class="modal" id="contact-thanks-modal" tabindex="-1" role="dialog" aria-labelledby="contact-thanks-modal-label">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="contact-modal-label">Thanks for your query</h4>
+      </div>
+        <div class="modal-body">
+          <p>We will be in touch shortly.</p>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
 
     <footer>
       <div class="container">
@@ -48,7 +90,7 @@
 
           <div class="contact_us col-md-4">
             <div>Need information? Give feedback?<br/>Get in touch.</div>
-            <div><a href="#" onclick="$('#contact-us-dialog').dialog('open');return false;">Fill form</a></div>
+            <div><a href="javascript:;" onclick="$('#contact-modal').modal('show');">Fill form</a></div>
             <div>info: +41 77 44 68 170<br>support: +41 22 57 52 229</div>
             <div>
               <a href="mailto:info@sixsq.com">info@sixsq.com</a>
