--- a/_includes/overview_usecases.html
+++ b/_includes/overview_usecases.html
@@ -1,4 +1,4 @@
-<div class="container usecase spacy">
+<div class="container big usecase spacy">
   <h1>{{ page.title }} Use Cases</h1>
   <div class="row">
     {% for post in site.posts %}
