--- a/_includes/whats_next.html
+++ b/_includes/whats_next.html
@@ -1,5 +1,5 @@
 <div style="color: white; background-color: #9B9B9B;">
-  <div class="container spacy">
+  <div class="container big spacy">
     <h1>What's next?</h1>
     <p>
 Interested and want to know more? We'd be pleased to provide you with further information. Get in touch.
