--- a/_layouts/article_nuvlabox_overview.html
+++ b/_layouts/article_nuvlabox_overview.html
@@ -7,13 +7,13 @@
   {% include nuvlabox_intro.html %}
 
         <div class="main-story nuvlabox">
-          <div class="container">
+          <div class="container big">
             <p align="center">
               <img src="/img/content/nuvlabox-overview.png" alt="NuvlaBox overview" />
             </p>
           </div>
         </div>
-        <div class="container spacy">
+        <div class="container big spacy">
           <h1>In a nutshell</h1>
           <div class="row">
             <div class="col-md-4">
@@ -24,10 +24,10 @@
             </div>
             <div class="col-md-4">
               <h2>
-                  Compact
+                  Secure
               </h2>
               <p>
-                  Replace up to 8 of your servers with an appliance as small as a modem...or 2 Swiss chocolate boxes.
+                  All communication encrypted and deployments automated for higher security.
               </p>
             </div>
             <div class="col-md-4">
@@ -48,10 +48,10 @@
             </div>
             <div class="col-md-4">
               <h2>
-                  Secure
+                  Compact
               </h2>
               <p>
-                  All communication encrypted and deployments automated for higher security.
+                  Replace up to 8 of your servers with an appliance as small as a modem...or 2 Swiss chocolate boxes.
               </p>
             </div>
             <div class="col-md-4">
@@ -67,7 +67,7 @@
       </div>
 
       <div class="main-story nuvlabox">
-        <div class="container spacy">
+        <div class="container big spacy">
           <h1 id="who-is-the-nuvlabox-for">Who is the NuvlaBox for?</h1>
           <div id="enterprise" class="row">
             <div class="col-md-6">
