--- a/_layouts/article_slipstream_overview.html
+++ b/_layouts/article_slipstream_overview.html
@@ -10,7 +10,7 @@
         <p align="center"><img src="/img/content/slipstream-overview.png" alt="SlipStram overview"/></p>
       </div>
 
-      <div class="container spacy">
+      <div class="container big spacy">
         <h1>In a nutshell</h1>
         <div class="row">
           <div class="col-md-4">
@@ -63,7 +63,7 @@
       </div>
 
       <div style="background-color: #eee">
-        <div class="container spacy">
+        <div class="container big spacy">
 
             {{ page.content | markdownify }}
             
