--- a/_layouts/personae_index.html
+++ b/_layouts/personae_index.html
@@ -13,7 +13,7 @@
   {% for post in site.posts reversed %}
     {% if post.category == page.category %}
     <div id="{{ post.title }}" class="{% cycle 'even', 'odd' %} spacy">
-      <div class="container personae">
+      <div class="container big personae">
         <center>
           <img src="{{ post.icon }}" />
           <p/>
