--- a/_layouts/article_nuvlabox_usecases.html
+++ b/_layouts/article_nuvlabox_usecases.html
@@ -9,7 +9,7 @@
 
   {% include nuvlabox_intro.html %}
 
-  <div class="container spacy">
+  <div class="container big spacy">
     <h1>Use Cases</h1>
 
     <div class="row">
@@ -34,10 +34,9 @@
         <h1 id="{{ post.title | replace:' ','-' }}">
           {{ post.title }}
         </h1>
-        <h2>User: <a href="/personae/index.html#{{ post.persona }}">{{ post.persona }}</a></h2>
-        <h2>Context: <a href="/products/nuvlabox.html#who-is-the-nuvlabox-for">{{ post.context }}</a></h2>
+        <h4>User: <a href="/personae/index.html#{{ post.persona }}">{{ post.persona }}</a></h4>
+        <h4>Context: <a href="/products/nuvlabox.html#who-is-the-nuvlabox-for">{{ post.context }}</a></h4>
         <!-- <h2>Context: <a href="/products/nuvlabox.html#{{ post.context_type }}">{{ post.context }}</a></h2> -->
-        <h2>Overview</h2>
         <div>
           {{ post.content }}
         </div>
