--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -39,7 +39,7 @@
               <h1>All Clouds Supported</h1>
               <h2>We support all mainstream clouds.</h2>
               <p align="center">
-                <img src="/img/content/cloud_providers_color_on_transparent_1000px.png" alt="SlipStream Supported Clouds" style="max-width: 700px" />
+                <img src="/img/content/cloud_providers_color_on_transparent_1000px.png" alt="SlipStream Supported Clouds" />
               </p>
               <h3>And if we are missing the one you need, get in touch... chances are it is already on its way.</h3>
             </div> <!-- /container -->
@@ -50,7 +50,7 @@
             <div class="container">
               <h1>Bridging the digital divide</h1>
               <h2>with an affordable cloud-in-a-box that's child's play to use and manage</h2>
-              <p align="center"><img src="/img/content/nuvlabox-overview.png" alt="SlipStram overview" max-width="900px" style="padding: 35px 0 15px 0;"/></p>
+              <p align="center"><img src="/img/content/nuvlabox-overview.png" alt="SlipStram overview" /></p>
               <p><a class="btn btn-primary btn-lg" role="button" href="/products/nuvlabox.html">Learn more &raquo;</a></p>
             </div>
 
