New button for all clouds

--- a/_layouts/welcome.html
+++ b/_layouts/welcome.html
@@ -42,6 +42,7 @@
                 <img src="/img/content/cloud_providers_color_on_transparent_1000px.png" alt="SlipStream Supported Clouds" />
               </p>
               <h3>And if we are missing the one you need, get in touch... chances are it is already on its way.</h3>
+              <p style="padding-top: 30px;"><a class="btn btn-primary btn-lg" role="button" href="/products/slipstream.html">Learn more &raquo;</a></p>
             </div> <!-- /container -->
 
           </div> <!-- /jumbotron -->
