Add whitepaper section

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -25,6 +25,7 @@
             <li><a href="/news">News</a></li>
             <li><a href="/blog">Blog</a></li>
             <li><a href="/videos">Videos</a></li>
+            <li><a href="/whitepapers">White Papers</a></li>
           </ul>
           <span></span>
         </li>
