--- a/_includes/media_nav.html
+++ b/_includes/media_nav.html
@@ -13,6 +13,7 @@
         <li id="sub_news"><a href="/news/index.html">News</a></li>
         <li id="sub_videos"><a href="/videos/index.html">Videos</a></li>
         <li id="sub_blog"><a href="/blog/index.html">Blog</a></li>
+        <li id="sub_whitepaper"><a href="/whitepapers/index.html">White Papers</a></li>
       </ul>
     </div>
   </div>
