Adjust spacing between users in mobile layout

--- a/_includes/front_personae.html
+++ b/_includes/front_personae.html
@@ -4,7 +4,7 @@
     <h3>Meet our SlipStream and NuvlaBox users</h3>
     <p/>
     {% for post in site.categories.personae reversed %}
-      <div class="col-md-3">
+      <div class="col-md-3" style="padding-top: 60px">
         <a href="/personae/index.html#{{ post.title }}">
           <center>
             <img src="{{ post.icon }}"></img>
