--- a/_includes/top.html
+++ b/_includes/top.html
@@ -17,6 +17,7 @@
         <li id="nav-nuvlabox"><a href="/products/nuvlabox.html">NuvlaBox</a><span></span></li>
         <li id="nav-personae"><a href="/personae/index.html">Our Users</a><span></span></li>
         <li id="nav-customers"><a href="/customers/index.html">Customers</a><span></span></li>
+        <li><a href="http://support.sixsq.com">Support</a><span></span></li>
         <li id="nav-about"><a href="/about-us.html">About Us</a><span></span></li>
         <li id="nav-contact"><a href="/contact.html">Contact</a><span></span></li>
         <li id="nav-media" class="dropdown">
