--- a/_includes/whats_next.html
+++ b/_includes/whats_next.html
@@ -4,7 +4,7 @@
     <p>
 Interested and want to know more? We'd be pleased to provide you with further information. Get in touch.
     </p>
-    <button class="btn btn-primary btn-lg center-block" data-toggle="modal" data-target="#contact-modal">
+    <button id="contact-button" class="btn btn-primary btn-lg center-block">
       Contact us &raquo;
     </button>
   </div>
