--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,6 +30,9 @@
   <script type="text/javascript">
 
   var _gaq = _gaq || [];
+  var pluginUrl =
+   '//www.google-analytics.com/plugins/ga/inpage_linkid.js';
+  _gaq.push(['_require', 'inpage_linkid', pluginUrl]);
   _gaq.push(['_setAccount', 'UA-6461733-1']);
   _gaq.push(['_setDomainName', 'sixsq.com']);
   _gaq.push(['_trackPageview']);
